# ChangeLog for app-text/kchmviewer
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/kchmviewer/ChangeLog,v 1.38 2010/10/26 20:58:17 hwoarang Exp $

  26 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  kchmviewer-5.2-r1.ebuild:
  Stable on amd64 wrt bug #338343

  26 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  kchmviewer-5.2-r1.ebuild:
  stable x86, bug 338343

*kchmviewer-5.2-r1 (25 Oct 2010)

  25 Oct 2010; Peter Volkov <pva@gentoo.org> +kchmviewer-5.2-r1.ebuild:
  Use qt4-r2.eclass, thatnk Markos Chandras for report #338343.

  24 Oct 2010; Brent Baude <ranger@gentoo.org> kchmviewer-5.2.ebuild:
  stable ppc, bug 338343

  17 May 2010; Peter Volkov <pva@gentoo.org> kchmviewer-5.2.ebuild,
  +files/kchmviewer-5.2-kde-build.patch:
  Fix build issue with USE=kde, bug #320191, thank Leonid Podolny and
  Vasileios P. Lourdas for report.

  17 May 2010; Peter Volkov <pva@gentoo.org>
  -files/kchmviewer-3.1_p2-gcc43.patch, -kchmviewer-4.1.ebuild,
  -kchmviewer-4.2.ebuild:
  Drop old.

*kchmviewer-5.2 (17 May 2010)

  17 May 2010; Peter Volkov <pva@gentoo.org> +kchmviewer-5.2.ebuild:
  Version bump, bug #320041, thank Vasileios P. Lourdas for report.

  11 Apr 2010; <nixnut@gentoo.org> kchmviewer-5.1.ebuild:
  ppc stable #310019

  05 Apr 2010; Markus Meier <maekke@gentoo.org> kchmviewer-5.1.ebuild:
  amd64/x86 stable, bug #310019

  22 Mar 2010; Ben de Groot <yngwin@gentoo.org>
  -kchmviewer-3.1_p2-r1.ebuild:
  Remove qt-3 and revdeps, bug #283429 (tracker) and #292192 (kchmviewer-3
  removal)

  07 Jan 2010; Joseph Jezak <josejx@gentoo.org> kchmviewer-4.2.ebuild:
  Marked ppc stable for bug #297010.

  31 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  kchmviewer-4.2.ebuild:
  stable x86, bug 297010

  19 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> kchmviewer-4.2.ebuild:
  amd64 stable wrt #297010

*kchmviewer-5.1 (17 Dec 2009)
