@@ -1,6 +1,10 @@
 # ChangeLog for app-text/kchmviewer
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/kchmviewer/ChangeLog,v 1.38 2010/10/26 20:58:17 hwoarang Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/kchmviewer/ChangeLog,v 1.39 2011/01/30 12:40:58 tampakrap Exp $
+
+  30 Jan 2011; Theo Chatzimichos <tampakrap@gentoo.org> -kchmviewer-5.1.ebuild,
+  kchmviewer-5.2-r1.ebuild:
+  EAPI3, small cleanup, remove old
 
   26 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
   kchmviewer-5.2-r1.ebuild:
